popup under construction

--- a/.env
+++ b/.env
@@ -1,7 +1,16 @@
 API_URL=https://apis-sandbox.fedex.com
-API_KEY=l7e7ca9b73cdc7494587c8e463cc07818d
-API_SECRET=7228f5ec45374304b85d03b7d4eb92ef
+API_KEY=l7ad510a02fd94407fadcadd78bba39a19
+SECRET_KEY=df0e74e2b4f84dd3978ad65f83e86d43
 ACCOUNT_ID=740561073
-LOCAl=Global
+LOCATION=Global
 GRANT_TYPE=client_credentials
-CLIENT_ID=l7e7ca9b73cdc7494587c8e463cc07818d
+SERVICE_TYPE=INTERNATIONAL_ECONOMY
+PICKUP_TYPE=DROPOFF_AT_FEDEX_LOCATION
+
+#database
+
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=123456
+DB_PORT=3306
+DB_DATABASE=cwaduana
