--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "formik": "^2.2.9",
+    "mysql2": "^2.3.3",
     "next": "13.0.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.27.0"
   },
   "devDependencies": {
+    "@types/node": "^18.11.16",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.2.4"
